Added padding to the center column content.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -159,7 +159,7 @@
 
             &nbsp;|&nbsp;
 
-            <b class="powered-by">Powered by <a href="http://littleconsultingnj.com">My CMS</a></b>
+            <b class="powered-by">Powered by <a href="http://littleconsultingnj.com/mycms/">myCMS</a></b>
           </p>
 
         </div>
