--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -264,8 +264,10 @@ background: transparent no-repeat right top;
     list-style-type:none;
 }
 #nav li {
-    margin-left:-20px;
-    padding-top:25px;
+    margin-left: -35px;
+padding-top: 15px;
+background: url(/images/navbkgnd.gif) no-repeat 0px 0px;
+text-align: center;
 }
 #nav li a{
     -moz-background-clip:border;
