Added jquery scroller "cycle" to main page also added nessisary code for doc ready etc.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag "rms.css"   %>
 
     <%= csrf_meta_tag %>
-    <%= javascript_include_tag 'jquery.js', 'jquery-ui.js','jquery_ujs.js', 'jquery.dataTables.js', 'jquery.purr.js', 'jquery.caret.js'%>
+    <%= javascript_include_tag 'jquery.js', 'jquery-ui.js','jquery_ujs.js', 'jquery.dataTables.js', 'jquery.purr.js', 'jquery.caret.js', 'jquery.cycle.js'%>
 
     <script type="text/javascript">
       // this allows jquery to be called along with scriptaculous and YUI without any conflicts
