Updated menu renderer so that the horizontal parent menu will stay highlighed when selecting a child menu.

--- a/app/views/site/show_properties.html.erb
+++ b/app/views/site/show_properties.html.erb
@@ -1,4 +1,7 @@
-<%  for property in @properties do %>
+<h1><%=@properties.size%> properties found in search.</h1>
+  </br>
+  <hr>
+  <%  for property in @properties do %>
     <table width="800">
       <tbody>
         <tr>
@@ -41,4 +44,3 @@
     </table>
   <%end%>
 
-  <%=@properties.size%> properties found in search.
