--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,4 +1,4 @@
-/*html { height: 100%; }
+ /*html { height: 100%; }
 body {
     min-height: 90%;
     height: 90%;
@@ -8,9 +8,9 @@ body {
 
 #edit-pages 
 {
-margin-top: -28px;
-position: absolute;
-margin-bottom: -40px;    
+    margin-top: -28px;
+    position: absolute;
+    margin-bottom: -40px;    
 }
 
 
@@ -36,9 +36,9 @@ margin-bottom: -40px;
 
 #close-box{
     position: absolute;
-margin-top: 83%;
-margin-left: 82%;
-    
+    margin-top: 83%;
+    margin-left: 82%;
+
 }
 
 .hidden-item {
@@ -229,12 +229,12 @@ border-width: 1px;
     font-weight:bold;
     letter-spacing: 10px;
 }
-    #div_menu {
+#div_menu {
 
 }
 #div-admin-menu {
-width:100%;
-float:left;
+    width:100%;
+    float:left;
 
 }
 
@@ -247,14 +247,14 @@ float:left;
 }
 
 #navi li a.top_link span {
-background: transparent right top;
+    background: transparent right top;
 }
 #navi li a.top_link {
-background: transparent;
+    background: transparent;
 }
 
 #navi li a.top_link span.down {
-background: transparent no-repeat right top;
+    background: transparent no-repeat right top;
 }
 
 #nav {
@@ -265,9 +265,9 @@ background: transparent no-repeat right top;
 }
 #nav li {
     margin-left: -35px;
-padding-top: 15px;
-background: url(/images/navbkgnd.gif) no-repeat 0px 0px;
-text-align: center;
+    padding-top: 15px;
+    background: url(/images/navbkgnd.gif) no-repeat 0px 0px;
+    text-align: center;
 }
 #nav li a{
     -moz-background-clip:border;
@@ -305,7 +305,7 @@ text-align: center;
 
 #headerTop {
     padding:15px;
-    
+
 }
 
 #div-vmenu-left a {
@@ -450,30 +450,30 @@ text-align: center;
     font-size: 18px;
 }
 a.navmenu3 {
-color: #A90707;
-text-decoration: none;
-font-size: 12px;
-font-style: oblique;
-font-weight: 900;
+    color: #A90707;
+    text-decoration: none;
+    font-size: 12px;
+    font-style: oblique;
+    font-weight: 900;
 }
 
 .myaccountcontent p {
-/* 
-margin-right: 30px;
-margin-left: 15px;
-margin-bottom: 18px;
-margin-top: 5px;
-*/
-margin: 0px 30px 0 15px;
+    /* 
+    margin-right: 30px;
+    margin-left: 15px;
+    margin-bottom: 18px;
+    margin-top: 5px;
+    */
+    margin: 0px 30px 0 15px;
 
 }
 
 .myaccountcontentitem {
-/*    margin-top:-21px;
-    padding-bottom:5px;
-    padding-left:23px;
-  height:14px;
-  */  
+    /*    margin-top:-21px;
+        padding-bottom:5px;
+        padding-left:23px;
+      height:14px;
+    */  
 
     margin-top: 0;
     padding-bottom: 0;
@@ -493,25 +493,25 @@ margin: 0px 30px 0 15px;
 
 
 .input_text_area {
--x-system-font:none;
-float:left;
-font-family:inherit;
-font-size:inherit;
-font-size-adjust:inherit;
-font-stretch:inherit;
-font-style:inherit;
-font-variant:inherit;
-font-weight:inherit;
-line-height:inherit;
-margin-left:20px;
-margin-top:0px;
-width: 450px;
-max-width: 555px;
-min-height: 100px;
+    -x-system-font:none;
+    float:left;
+    font-family:inherit;
+    font-size:inherit;
+    font-size-adjust:inherit;
+    font-stretch:inherit;
+    font-style:inherit;
+    font-variant:inherit;
+    font-weight:inherit;
+    line-height:inherit;
+    margin-left:20px;
+    margin-top:0px;
+    width: 450px;
+    max-width: 555px;
+    min-height: 100px;
 }
 
 .addthis_button_facebook_like at300b {
- height:30px;
+    height:30px;
 }
 
 .addthis_toolbox {
@@ -520,19 +520,19 @@ min-height: 100px;
 }
 
 .input_text_field {
--x-system-font:none;
-float:left;
-font-family:inherit;
-font-size:inherit;
-font-size-adjust:inherit;
-font-stretch:inherit;
-font-style:inherit;
-font-variant:inherit;
-font-weight:inherit;
-line-height:inherit;
-margin-left:21px;
-margin-bottom:-5px;
-max-width:500px;
+    -x-system-font:none;
+    float:left;
+    font-family:inherit;
+    font-size:inherit;
+    font-size-adjust:inherit;
+    font-stretch:inherit;
+    font-style:inherit;
+    font-variant:inherit;
+    font-weight:inherit;
+    line-height:inherit;
+    margin-left:21px;
+    margin-bottom:-5px;
+    max-width:500px;
 }
 
 
@@ -600,10 +600,10 @@ max-width:500px;
 
 
 div.hr {
-border-bottom:1px solid #CCCCCC;
-font-size:0;
-height:auto;
-margin:3px 10px 2px 12px;
+    border-bottom:1px solid #CCCCCC;
+    font-size:0;
+    height:auto;
+    margin:3px 10px 2px 12px;
 }
 
 .list-title{
@@ -634,31 +634,31 @@ margin:3px 10px 2px 12px;
 table.list-table:hover{
     background:#fef398 none repeat scroll 0 0;
     color:#000000;
-    
+
 }
 table tr.list-table:hover {
-background:#fef398 none repeat scroll 0 0;
-color:#000000;
+    background:#fef398 none repeat scroll 0 0;
+    color:#000000;
 }
 
 table tr.list-table:active {
-background:#c3c3c3 none repeat scroll 0 0;
-color:#000000;
+    background:#c3c3c3 none repeat scroll 0 0;
+    color:#000000;
 }
 
 table tr td.list-table:active {
-background:#c3c3c3 none repeat scroll 0 0;
-color:#000000;
+    background:#c3c3c3 none repeat scroll 0 0;
+    color:#000000;
 }
 .image-delete-list{
-margin-right:5px;
-margin-top: -25px;
+    margin-right:5px;
+    margin-top: -25px;
 }
 
 
 .image-delete-list2{
-margin-right:5px;
-margin-top: -5px;
+    margin-right:5px;
+    margin-top: -5px;
 }
 .add_sub_menu {
     margin-right:5px;
@@ -721,32 +721,32 @@ margin-top: -5px;
 
 }
 .loginBlock {
-       zoom: 1;
+    zoom: 1;
 
 }
 
 .loginCell {
-       padding:10px;
+    padding:10px;
     margin:5px;
-       zoom: 1;
+    zoom: 1;
 
 }
 
 
 .best_in_place {
- /* padding: .1m; */
-  cursor: hand;
-  cursor: pointer;
-  padding:4px;
-  -moz-transition: background 0.5s linear;
-  -o-transition: background 0.5s linear;
-  -webkit-transition: background 0.5s linear;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
+    /* padding: .1m; */
+    cursor: hand;
+    cursor: pointer;
+    padding:4px;
+    -moz-transition: background 0.5s linear;
+    -o-transition: background 0.5s linear;
+    -webkit-transition: background 0.5s linear;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -khtml-border-radius: 5px;
+    border-radius: 5px;
 }
 .best_in_place_adj {
     background: none repeat scroll 0 0 white;
@@ -758,16 +758,16 @@ margin-top: -5px;
 } 
 
 .best_in_place:hover, #user_account .do_hover {
-/*  padding-right: 1.5em;*/
-/*  background: url("/images/red_pen.png") no-repeat right;*/
-  background-color: #CCC;
+    /*  padding-right: 1.5em;*/
+    /*  background: url("/images/red_pen.png") no-repeat right;*/
+    background-color: #CCC;
 }
 
 
 .info_edit {
-  float: right;
-  cursor: hand;
-  cursor: pointer;
+    float: right;
+    cursor: hand;
+    cursor: pointer;
 }
 
 /* Missatges Flotants */
@@ -794,15 +794,25 @@ margin-top: -5px;
 }
 
 #header-table {
-    
+
     margin-bottom:-5px;
 }
 
 
 div#div-vmenu-left .clear a{
-display: block;
-margin: auto;
-padding: 0px;
-text-align: left;
+    display: block;
+    margin: auto;
+    padding: 0px;
+    text-align: left;
 
+}
+
+.prop-info {
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 166px;
+    text-align: center;
+    width: 215px;
+    background: white;
+    padding-top: 10px;
 }
