Updated property info with correct background color #EEE.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -813,6 +813,6 @@ div#div-vmenu-left .clear a{
     margin-top: 166px;
     text-align: center;
     width: 215px;
-    background: white;
+    background: #EEE;
     padding-top: 10px;
 }
